# BackendlessQt

./: .gitignore  API.cpp  API.hpp  BackendlessAPI.cpp  BackendlessAPI.hpp  BackendlessQt.pro  BackendlessUser.cpp  BackendlessUser.hpp  BackendlessUserAPI.cpp  BackendlessUserAPI.hpp  BasicAPI.cpp  BasicAPI.hpp  CMakeLists.txt  README.md  StandardNetworkManager.cpp  StandardNetworkManager.hpp  test.cpp
.github/workflows/: qt.yml
Tests/: BackendlessQtTests.pro  test.cpp
